--- a/outlet/outlet.page.html
+++ b/outlet/outlet.page.html
@@ -227,7 +227,7 @@
         <a [routerLink]="['/'+pageConfig.pageName+'/'+i.Id]">{{i.Id}}</a>
       </div>
 
-      <div class="col-icon cell">
+      <div class="col-icon large cell">
         <ion-icon
           class="min-btn"
           [color]="i.IsPersonal?'success':'warning'"
