--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -212,27 +212,15 @@
                   <ion-col size="12" size-sm="6" size-xl="4" offset-xl="3">
                     <div class="c-control">
                       <span class="no-warp">
-                        <input
-                          (change)="saveChange()"
-                          class="c-checkbox"
-                          id="IsVendor"
-                          formControlName="IsVendor"
-                          type="checkbox"
-                        />
+                        <input (change)="changeType('IsVendor')" class="c-checkbox" id="IsVendor" formControlName="IsVendor" type="checkbox" />
                         <label class="c-label checkbox" for="IsVendor"
                           >{{'Vendor' | translate}}
-                          <span
-                            *ngIf="!formGroup.controls.IsVendor.valid && !formGroup.controls.IsVendor.pending && (formGroup.controls.IsVendor.dirty || submitAttempt)"
-                            ion-text
-                            color="danger"
-                            >(*)</span
-                          >
-                        </label> </span
-                      ><br />
+                          <span *ngIf="!formGroup.controls.IsVendor.valid && !formGroup.controls.IsVendor.pending && (formGroup.controls.IsVendor.dirty || submitAttempt)" ion-text color="danger" >(*)</span >
+                        </label> </span ><br/>
 
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsDistributor')"
                           class="c-checkbox"
                           id="IsDistributor"
                           formControlName="IsDistributor"
@@ -250,7 +238,7 @@
                       ><br />
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsStorer')"
                           class="c-checkbox"
                           id="IsStorer"
                           formControlName="IsStorer"
@@ -268,7 +256,7 @@
                       ><br />
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsCarrier')"
                           class="c-checkbox"
                           id="IsCarrier"
                           formControlName="IsCarrier"
@@ -286,7 +274,7 @@
                       ><br />
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsOutlets')"
                           class="c-checkbox"
                           id="IsOutlets"
                           formControlName="IsOutlets"
@@ -304,7 +292,7 @@
                       ><br />
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsCustomer')"
                           class="c-checkbox"
                           id="IsCustomer"
                           formControlName="IsCustomer"
@@ -322,7 +310,7 @@
                       ><br />
                       <span class="no-warp">
                         <input
-                          (change)="saveChange()"
+                          (change)="changeType('IsProvideReferenceCode')"
                           class="c-checkbox"
                           id="IsProvideReferenceCode"
                           formControlName="IsProvideReferenceCode"
