--- a/outlet-detail/outlet-detail.page.html
+++ b/outlet-detail/outlet-detail.page.html
@@ -568,7 +568,7 @@
                 <div class="table-contain">
                   <section class="table">
                     <header class="bold">
-                      <div class="col-id cell">{{'#Order' | translate}}</div>
+                      <div class="col-id cell">{{'Sale orders' | translate}}</div>
                       <!-- <div class="col-status cell">{{'Status' | translate}}</div> -->
                       <div class="col-code cell">{{'Daily order' | translate}}</div>
                       <div class="col-code cell">{{'Sales staff' | translate}}</div>
