--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -26,7 +26,7 @@
             <ion-row>
               <ion-col size="12" size-md="12" size-lg="12" size-xl="5">
                 <div class="c-control">
-                  <label class="c-label" for="Name">{{'#Id' | translate}}</label>
+                  <label class="c-label" for="Name">{{'Id' | translate}}</label>
                   <input readonly class="c-input" [ngModel]="item.Id" type="text" />
                 </div>
                 <div class="c-control">
@@ -115,7 +115,7 @@
                   </ion-col>
                   <ion-col size="12" size-sm="6" size-xl="4">
                     <div class="c-control" *ngIf="item.Id">
-                      <label class="c-label" for="Id">{{'#Id' | translate}}</label>
+                      <label class="c-label" for="Id">{{'Id' | translate}}</label>
                       <input class="c-input" id="Id" formControlName="Id" type="number" />
                     </div>
                     <div class="c-control">
@@ -603,7 +603,7 @@
                     <div class="table-contain">
                       <section class="table">
                         <header class="bold">
-                          <div class="col-id cell">{{'#Order' | translate}}</div>
+                          <div class="col-id cell">{{'Sale orders' | translate}}</div>
                           <!-- <div class="col-status cell">{{'Status' | translate}}</div> -->
                           <div class="col-code cell">{{'Daily order' | translate}}</div>
                           <div class="col-code cell">{{'Sales staff' | translate}}</div>
