--- a/outlet-detail/outlet-detail.page.html
+++ b/outlet-detail/outlet-detail.page.html
@@ -46,10 +46,10 @@
                     color="success"
                     *ngIf="formGroup.controls.WorkPhone.valid && formGroup.controls.WorkPhone.dirty"
                   >
-                    Số điện thoại hợp lệ
+                    {{'Số điện thoại hợp lệ' | translate}}
                   </ion-text>
                   <ion-text color="danger" *ngIf="!formGroup.controls.WorkPhone.valid">
-                    Số điện thoại không hợp lệ hoặc đã được sử dụng
+                    {{'Số điện thoại không hợp lệ hoặc đã được sử dụng' | translate}}
                   </ion-text>
                 </div>
 
@@ -485,7 +485,7 @@
             <ion-row class="hr-group" *ngIf="item?._Routes">
               <ion-col size="12" size-sm="12" size-md="12" size-xl="3">
                 <ion-list-header class="ion-no-padding">
-                  <ion-label color="primary">Tuyến bán hàng</ion-label>
+                  <ion-label color="primary">{{'Tuyến bán hàng' | translate}}</ion-label>
                 </ion-list-header>
               </ion-col>
               <ion-col size="12" size-sm size-xl="8">
@@ -561,7 +561,7 @@
             <ion-row class="hr-group" *ngIf="item?._LastSOs?.length">
               <ion-col size="12" size-sm="12" size-md="12" size-xl="3">
                 <ion-list-header class="ion-no-padding">
-                  <ion-label color="primary">Đơn hàng gần đây</ion-label>
+                  <ion-label color="primary">{{'Đơn hàng gần đây' | translate}}</ion-label>
                 </ion-list-header>
               </ion-col>
               <ion-col size="12" size-sm size-xl="8">
