--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -860,7 +860,7 @@
                 </ion-list-header>
               </ion-list>
             </ion-col>
-            <ion-col size="12" size-sm size-xl="8"  class="ion-no-padding">
+            <ion-col size="12" size-sm size-xl="8"  class="ion-no-padding" *ngIf="formGroup.get('Addresses').value.length > 0">
               <app-address *ngFor="let address of formGroup.get('Addresses')['controls']"
               [address]="address.value"
               [canEdit]="pageConfig.canEdit"
