--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -869,13 +869,13 @@
               (onDelete)="removeAddress($event)"
             ></app-address>
             </ion-col>
-            <ion-col size="12" size-xl="4" *ngIf="formGroup.get('Addresses').value.length == 0 && pageConfig.canEdit">
+            <ion-col size="12" size-xl="4" *ngIf="formGroup.get('Addresses').value.length == 0 && pageConfig.canEdit && isShowAddAddress">
               <ion-button (click)="addAddress({})">
                 {{ 'Add address' | translate }}
               </ion-button>
             </ion-col>
           </ion-row>
-          <ion-row class="hr-group border" *ngIf="formGroup.get('Addresses').value.length > 0 && pageConfig.canEdit">
+          <ion-row class="hr-group border" *ngIf="formGroup.get('Addresses').value.length > 0 && pageConfig.canEdit && isShowAddAddress">
             <ion-col size="0" size-md="0" size-lg="0" size-xl="3"></ion-col>
             <ion-col size="12" size-xl="4">
               <ion-button (click)="addAddress({})">
