--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -469,7 +469,7 @@
                 <ion-row class="hr-group" *ngIf="item?._Routes">
                   <ion-col size="12" size-sm="12" size-md="12" size-xl="3">
                     <ion-list-header class="ion-no-padding">
-                      <ion-label color="primary">{{'Tuyến bán hàng' | translate}}</ion-label>
+                      <ion-label color="primary">{{'Master coverage plan' | translate}}</ion-label>
                     </ion-list-header>
                   </ion-col>
                   <ion-col size="12" size-sm size-xl="8">
@@ -486,7 +486,7 @@
                           <div class="col-checkbox cell">{{'Mon' | translate}}</div>
                           <div class="col-checkbox cell">{{'Tue' | translate}}</div>
                           <div class="col-checkbox cell">{{'Wed' | translate}}</div>
-                          <div class="col-checkbox cell">{{'Collect' | translate}}</div>
+                          <div class="col-checkbox cell">{{'Thu' | translate}}</div>
                           <div class="col-checkbox cell">{{'Fri' | translate}}</div>
                           <div class="col-checkbox cell">{{'Sat' | translate}}</div>
                           <div class="col-checkbox cell">{{'Sun' | translate}}</div>
