--- a/business-partner/business-partner.page.html
+++ b/business-partner/business-partner.page.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsOutlets')">
-        {{'Outlets' | translate}}
+        {{'abbreviation of outlet' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsOutlets"
@@ -109,7 +109,7 @@
         ></ion-icon>
       </div>
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsStorer')">
-        {{'Storer' | translate}}
+        {{'abbreviation of storer' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsStorer"
@@ -124,7 +124,7 @@
         ></ion-icon>
       </div>
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsVendor')">
-        {{'Vendor' | translate}}
+        {{'abbreviation of vendor' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsVendor"
@@ -139,7 +139,7 @@
         ></ion-icon>
       </div>
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsCarrier')">
-        {{'Carrier' | translate}}
+        {{'abbreviation of carrier' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsCarrier"
@@ -154,7 +154,7 @@
         ></ion-icon>
       </div>
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsBranch')">
-        {{'Branch' | translate}}
+        {{'abbreviation of branch' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsBranch"
@@ -169,7 +169,7 @@
         ></ion-icon>
       </div>
       <div class="col-id cell ion-hide-sm-down" (click)="sortToggle('IsStaff')">
-        {{'Staff' | translate}}
+        {{'abbreviation of staff' | translate}}
         <ion-icon
           class="min-btn"
           *ngIf="sort.IsStaff"
