Update translate + format

--- a/attendance-booking/attendance-booking.page.html
+++ b/attendance-booking/attendance-booking.page.html
@@ -14,7 +14,7 @@
 		(help)="help()"
 		(unselect)="unselect()"
 		(archiveItems)="archiveItems()"
-		(deleteItems)="deleteItems()"
+		(deleteItems)="delete()"
 		(changeBranch)="changeBranch($event)"
 	>
 		<span title>{{numberOfDinnerPax + 'P - '+ numberOfReal+'Đ - '+numberOfKid+'T - '+numberOfForeigner+'N'}}</span>
