--- a/outlet/outlet.page.html
+++ b/outlet/outlet.page.html
@@ -1,9 +1,5 @@
 <ion-header>
-	<app-toolbar [page]="this">
-
-
-
-	</app-toolbar>
+	<app-toolbar [page]="this"> </app-toolbar>
 	<!-- <app-list-toolbar
 		pageTitle="{{'List' | translate}}"
 		[ShowFeature]="false"
@@ -33,13 +29,8 @@
 		<div class="ion-padding"></div>
 	</ion-fab>
 
-	<app-page-title
-		class="ion-padding safe-max-width"
-		[icon]="pageConfig.pageIcon"
-		[color]="pageConfig.pageColor"
-		[title]="pageConfig.pageTitle"
-		[remark]="pageConfig.pageRemark"
-	></app-page-title>
+	<app-page-title class="ion-padding safe-max-width" [pageConfig]="pageConfig"></app-page-title>
+
 	<section class="table responsive">
 		<header class="bold">
 			<div class="col-checkbox cell"></div>
