--- a/attendance-booking/attendance-booking.page.html
+++ b/attendance-booking/attendance-booking.page.html
@@ -19,6 +19,7 @@
 		(selectedRowsChange)="showCommandBySelectedRows($event)"
 	>
 		<datatable-column [checkbox]="true" name=""></datatable-column>
+		<datatable-column class="col-date" format="dd/MM/yy hh:mm" name="Party date" property="PartyDate" filterControlType="date"></datatable-column>
 		<!-- <datatable-column class="col-id" name="#" property="Id" [navLink]="pageConfig.pageName" [sticky]="true"></datatable-column> -->
 		<datatable-column class="col-remark bold" name="Customer name" property="CustomerName" [navLink]="pageConfig.pageName" [sticky]="true"></datatable-column>
 		<datatable-column class="col-code phone" name="Telephone" property="Phone">
@@ -30,7 +31,6 @@
 			</ng-template>
 		</datatable-column>
 
-		<datatable-column class="col-date" format="dd/mm/yy hh:MM" name="Party date" property="PartyDate" filterControlType="date"></datatable-column>
 
 		<datatable-column class="col-code" name="Table" property="RegisteredTable">
 			<ng-template let-i="row" datatable-cell-template>
