--- a/outlet-detail/outlet-detail.page.html
+++ b/outlet-detail/outlet-detail.page.html
@@ -128,7 +128,7 @@
 							<ion-col size="12" size-sm size-xl="4">
 								<div class="c-control">
 									<label class="c-label" for="IDOwner"
-										>{{'Customer care staff' | translate}}
+										>{{'Person in charge' | translate}}
 										<span
 											*ngIf="!formGroup.controls.IDOwner.valid && !formGroup.controls.IDOwner.pending && (formGroup.controls.IDOwner.dirty || submitAttempt)"
 											ion-text
