--- a/business-partner-detail/business-partner-detail.page.html
+++ b/business-partner-detail/business-partner-detail.page.html
@@ -185,7 +185,7 @@
 										</div>
 										<div class="c-control">
 											<label class="c-label" for="IDOwner"
-												>{{'Customer care staff' | translate}}
+												>{{'Person in charge' | translate}}
 												<span
 													*ngIf="!formGroup.controls.IDOwner.valid && !formGroup.controls.IDOwner.pending && (formGroup.controls.IDOwner.dirty || submitAttempt)"
 													ion-text
