--- a/outlet-detail/outlet-detail.page.html
+++ b/outlet-detail/outlet-detail.page.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<app-toolbar [page]="this">
-		<ion-button *ngIf="pageConfig.canRequestDataCorrection" title="{{'Request data correction' | translate}}" color="secondary" (click)="openRequestDataConnectionModal()">
+		<ion-button *ngIf="pageConfig.canRequestDataCorrection && pageConfig.ShowRequestDataCorrection" title="{{'Request data correction' | translate}}" color="secondary" (click)="openRequestDataConnectionModal()">
 			{{'Request data correction' | translate}}
 		</ion-button>
 	</app-toolbar>
@@ -241,6 +241,34 @@
 							</ion-col>
 						</ion-row>
 
+						<ion-row class="hr-group">
+							<ion-col size="12" size-md="12" size-lg="12" size-xl="3">
+								<ion-list lines="none">
+									<ion-list-header class="ion-no-padding">
+										<ion-label color="primary"> {{ 'Billing address' | translate }} </ion-label>
+									</ion-list-header>
+								</ion-list>
+							</ion-col>
+							<ion-col size="12" size-sm size-xl="8" class="ion-no-padding" *ngIf="formGroup.get('TaxInfos').value.length > 0">
+								<app-tax-info
+									*ngFor="let taxInfo of formGroup.get('TaxInfos')['controls']"
+									[taxInfo]="taxInfo.value"
+									[canEdit]="pageConfig.canEdit"
+									(onChange)="changeTaxInfo($event)"
+									(onDelete)="removeTaxInfo($event)"
+								></app-tax-info>
+							</ion-col>
+							<ion-col size="12" size-xl="4" *ngIf="formGroup.get('TaxInfos').value.length == 0 && pageConfig.canEdit &&  formGroup.get('TaxInfos').valid">
+								<ion-button (click)="addTaxInfo({})"> {{ 'Add billing information' | translate }} </ion-button>
+							</ion-col>
+						</ion-row>
+						<ion-row class="hr-group border" *ngIf="formGroup.get('TaxInfos').value.length > 0 && pageConfig.canEdit && formGroup.get('TaxInfos').valid">
+							<ion-col size="0" size-md="0" size-lg="0" size-xl="3"></ion-col>
+							<ion-col size="12" size-xl="4">
+								<ion-button (click)="addTaxInfo({})"> {{ 'Add billing information' | translate }} </ion-button>
+							</ion-col>
+						</ion-row>
+
 						<!-- <app-bp-address
                   [bpId]="item.Id"
                   [canEdit]="pageConfig.canEdit"
@@ -250,7 +278,7 @@
 						<!-- <app-bp-address [bpId]="item.Id" [canEdit]="pageConfig.canEdit" *ngIf="item.Id"></app-bp-address> -->
 
 						<!-- Thông tin hóa đơn -->
-						<app-bp-tax-address [bpId]="item.Id" [canEdit]="pageConfig.canEdit" *ngIf="item.Id"></app-bp-tax-address>
+						<!-- <app-bp-tax-address [bpId]="item.Id" [canEdit]="pageConfig.canEdit" *ngIf="item.Id"></app-bp-tax-address> -->
 						<ion-row class="hr-group" *ngIf="item.Id==0">
 							<ion-col size="12" size-sm="12" size-md="12" size-xl="3">
 								<ion-list-header class="ion-no-padding">
